--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.board {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    background-color: tomato;
+    flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.winner {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    display: flex;
+}
+
+.main {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.tile {
+    background-color: #192841;
+    color: white;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0% 0.1% 0% 0%;
+    border-radius: 10px;
+}
+
+.mark {
+    background-color:#192841;
+    color:white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0% 0.1% 0% 0%;
+    border-radius: 10px;
+    font-size: 60px;
 }
